# Job-Application-Bot

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  scheduler.py
config/: search_criteria.yaml  settings.py
data/: profile.example.yaml  resume.example.md
job_bot/: pipeline.py  rate_limiter.py
job_bot/ai/: client.py  cover_letter.py  evaluator.py  ollama_client.py
job_bot/applicator/: external_apply.py
job_bot/models/: application.py  job.py
job_bot/scrapers/: base.py  linkedin.py  ziprecruiter.py
job_bot/storage/: database.py  repository.py
job_bot/utils/: resume_pdf.py
